// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container > Modification Editor render just the title if not loaded 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(ModificationEditor)
    params={
      Object {
        "modificationId": "1234",
        "scenarioId": "1",
      }
    }
  >
    <ModificationEditor
      allVariants={
        Array [
          "Default",
        ]
      }
      clearActive={[Function]}
      copyModification={[Function]}
      feedIsLoaded={true}
      modification={
        Object {
          "_id": "1234",
          "bidirectional": false,
          "description": "Mock description",
          "entries": Array [],
          "feed": "1",
          "name": "Test Modification",
          "routes": Array [
            "route1",
          ],
          "scenarioId": "1",
          "segments": Array [
            {
          "type": "Feature",
          "properties": {},
          "geometry": {
            "type": "LineString",
            "coordinates": [
              [
                "-122.02460000",
                "36.97070000"
              ],
              [
                "-122.02790000",
                "37.04900000"
              ],
              [
                "-121.97990000",
                "37.22990000"
              ],
              [
                "-121.94450000",
                "37.32400000"
              ],
              [
                "-121.93600000",
                "37.35300000"
              ],
              [
                "-121.92400000",
                "37.36500000"
              ]
            ]
          }
        },
          ],
          "showOnMap": false,
          "timetables": Array [
            Object {
              "_id": "timetable-id",
              "dwellTime": 10,
              "endTime": 57600,
              "exactTimes": false,
              "friday": true,
              "headwaySecs": 900,
              "modificationId": "1234",
              "modificationName": "Test Modification",
              "monday": true,
              "name": "Test timetable",
              "patternTrips": Array [
                "abcd",
              ],
              "phaseAtStop": "",
              "phaseFromStop": "",
              "phaseFromTimetable": "",
              "phaseSeconds": 300,
              "saturday": false,
              "segmentSpeeds": Array [],
              "sourceTrip": "abcd",
              "startTime": 28800,
              "sunday": false,
              "thursday": true,
              "tuesday": true,
              "wednesday": true,
            },
          ],
          "trips": Array [
            "abcd",
          ],
          "type": "add-trip-pattern",
          "variants": Array [
            true,
          ],
        }
      }
      modificationId="1234"
      params={
        Object {
          "modificationId": "1234",
          "scenarioId": "1",
        }
      }
      removeModification={[Function]}
      scenarioId="1"
      setActive={[Function]}
      setActiveTrips={[Function]}
      setMapState={[Function]}
      update={[Function]}
      updateAndRetrieveFeedData={[Function]}
    >
      <div>
        <div
          className="ApplicationDockTitle"
        >
          <IconLink
            title="Modifications"
            to="/scenarios/1"
            type="chevron-left"
          >
            <Link
              title="Modifications"
              to="/scenarios/1"
              type="button"
            >
              <Tip
                tip="Modifications"
              >
                <span
                  className="Tip "
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <Link
                    name="Modifications"
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/scenarios/1"
                    type="button"
                  >
                    <a
                      name="Modifications"
                      onClick={[Function]}
                      style={Object {}}
                      type="button"
                    >
                      <Icon
                        type="chevron-left"
                      >
                        <i
                          className="fa fa-chevron-left fa-fw "
                        />
                      </Icon>
                    </a>
                  </Link>
                </span>
              </Tip>
            </Link>
          </IconLink>
          Test Modification
          <IconLink
            className="pull-right"
            onClick={[Function]}
            title="Delete modification"
            type="trash"
          >
            <Link
              className="pull-right"
              onClick={[Function]}
              title="Delete modification"
              type="button"
            >
              <Tip
                className="pull-right"
                tip="Delete modification"
              >
                <span
                  className="Tip pull-right"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <a
                    name="Delete modification"
                    onClick={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    <Icon
                      type="trash"
                    >
                      <i
                        className="fa fa-trash fa-fw "
                      />
                    </Icon>
                  </a>
                </span>
              </Tip>
            </Link>
          </IconLink>
          <IconLink
            className="pull-right"
            onClick={[Function]}
            title="Copy modification"
            type="copy"
          >
            <Link
              className="pull-right"
              onClick={[Function]}
              title="Copy modification"
              type="button"
            >
              <Tip
                className="pull-right"
                tip="Copy modification"
              >
                <span
                  className="Tip pull-right"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <a
                    name="Copy modification"
                    onClick={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    <Icon
                      type="copy"
                    >
                      <i
                        className="fa fa-copy fa-fw "
                      />
                    </Icon>
                  </a>
                </span>
              </Tip>
            </Link>
          </IconLink>
          <IconLink
            className="pull-right"
            onClick={[Function]}
            title="Edit modification name"
            type="pencil"
          >
            <Link
              className="pull-right"
              onClick={[Function]}
              title="Edit modification name"
              type="button"
            >
              <Tip
                className="pull-right"
                tip="Edit modification name"
              >
                <span
                  className="Tip pull-right"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <a
                    name="Edit modification name"
                    onClick={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    <Icon
                      type="pencil"
                    >
                      <i
                        className="fa fa-pencil fa-fw "
                      />
                    </Icon>
                  </a>
                </span>
              </Tip>
            </Link>
          </IconLink>
        </div>
        <InnerDock>
          <div
            className="InnerDock "
            style={
              Object {
                "height": 768,
              }
            }
          >
            <Body>
              <div
                className="panel-body"
              >
                <TextArea
                  label="Description"
                  onChange={[Function]}
                  value="Mock description"
                >
                  <Group
                    id="description-input-10"
                    label="Description"
                    onChange={[Function]}
                  >
                    <div
                      className="form-group"
                    >
                      <label
                        htmlFor="description-input-10"
                      >
                        Description
                      </label>
                      <textarea
                        className="form-control"
                        id="description-input-10"
                        label="Description"
                        onChange={[Function]}
                      >
                        Mock description
                      </textarea>
                    </div>
                  </Group>
                </TextArea>
                <ModificationType
                  modification={
                    Object {
                      "_id": "1234",
                      "bidirectional": false,
                      "description": "Mock description",
                      "entries": Array [],
                      "feed": "1",
                      "name": "Test Modification",
                      "routes": Array [
                        "route1",
                      ],
                      "scenarioId": "1",
                      "segments": Array [
                        {
                      "type": "Feature",
                      "properties": {},
                      "geometry": {
                        "type": "LineString",
                        "coordinates": [
                          [
                            "-122.02460000",
                            "36.97070000"
                          ],
                          [
                            "-122.02790000",
                            "37.04900000"
                          ],
                          [
                            "-121.97990000",
                            "37.22990000"
                          ],
                          [
                            "-121.94450000",
                            "37.32400000"
                          ],
                          [
                            "-121.93600000",
                            "37.35300000"
                          ],
                          [
                            "-121.92400000",
                            "37.36500000"
                          ]
                        ]
                      }
                    },
                      ],
                      "showOnMap": false,
                      "timetables": Array [
                        Object {
                          "_id": "timetable-id",
                          "dwellTime": 10,
                          "endTime": 57600,
                          "exactTimes": false,
                          "friday": true,
                          "headwaySecs": 900,
                          "modificationId": "1234",
                          "modificationName": "Test Modification",
                          "monday": true,
                          "name": "Test timetable",
                          "patternTrips": Array [
                            "abcd",
                          ],
                          "phaseAtStop": "",
                          "phaseFromStop": "",
                          "phaseFromTimetable": "",
                          "phaseSeconds": 300,
                          "saturday": false,
                          "segmentSpeeds": Array [],
                          "sourceTrip": "abcd",
                          "startTime": 28800,
                          "sunday": false,
                          "thursday": true,
                          "tuesday": true,
                          "wednesday": true,
                        },
                      ],
                      "trips": Array [
                        "abcd",
                      ],
                      "type": "add-trip-pattern",
                      "variants": Array [
                        true,
                      ],
                    }
                  }
                  setMapState={[Function]}
                  type="add-trip-pattern"
                  update={[Function]}
                  updateAndRetrieveFeedData={[Function]}
                >
                  <Connect(Component)
                    modification={
                      Object {
                        "_id": "1234",
                        "bidirectional": false,
                        "description": "Mock description",
                        "entries": Array [],
                        "feed": "1",
                        "name": "Test Modification",
                        "routes": Array [
                          "route1",
                        ],
                        "scenarioId": "1",
                        "segments": Array [
                          {
                        "type": "Feature",
                        "properties": {},
                        "geometry": {
                          "type": "LineString",
                          "coordinates": [
                            [
                              "-122.02460000",
                              "36.97070000"
                            ],
                            [
                              "-122.02790000",
                              "37.04900000"
                            ],
                            [
                              "-121.97990000",
                              "37.22990000"
                            ],
                            [
                              "-121.94450000",
                              "37.32400000"
                            ],
                            [
                              "-121.93600000",
                              "37.35300000"
                            ],
                            [
                              "-121.92400000",
                              "37.36500000"
                            ]
                          ]
                        }
                      },
                        ],
                        "showOnMap": false,
                        "timetables": Array [
                          Object {
                            "_id": "timetable-id",
                            "dwellTime": 10,
                            "endTime": 57600,
                            "exactTimes": false,
                            "friday": true,
                            "headwaySecs": 900,
                            "modificationId": "1234",
                            "modificationName": "Test Modification",
                            "monday": true,
                            "name": "Test timetable",
                            "patternTrips": Array [
                              "abcd",
                            ],
                            "phaseAtStop": "",
                            "phaseFromStop": "",
                            "phaseFromTimetable": "",
                            "phaseSeconds": 300,
                            "saturday": false,
                            "segmentSpeeds": Array [],
                            "sourceTrip": "abcd",
                            "startTime": 28800,
                            "sunday": false,
                            "thursday": true,
                            "tuesday": true,
                            "wednesday": true,
                          },
                        ],
                        "trips": Array [
                          "abcd",
                        ],
                        "type": "add-trip-pattern",
                        "variants": Array [
                          true,
                        ],
                      }
                    }
                    setMapState={[Function]}
                    type="add-trip-pattern"
                    update={[Function]}
                    updateAndRetrieveFeedData={[Function]}
                  >
                    <Component
                      allPhaseFromTimetableStops={Object {}}
                      dispatch={[Function]}
                      extendFromEnd={true}
                      gtfsStops={Array []}
                      mapState={
                        Object {
                          "activeTrips": Array [],
                          "center": Object {
                            "lat": 38.8886,
                            "lon": -77.043,
                          },
                          "components": Array [],
                          "zoom": 12,
                        }
                      }
                      modification={
                        Object {
                          "_id": "1234",
                          "bidirectional": false,
                          "description": "Mock description",
                          "entries": Array [],
                          "feed": "1",
                          "name": "Test Modification",
                          "routes": Array [
                            "route1",
                          ],
                          "scenarioId": "1",
                          "segments": Array [
                            {
                          "type": "Feature",
                          "properties": {},
                          "geometry": {
                            "type": "LineString",
                            "coordinates": [
                              [
                                "-122.02460000",
                                "36.97070000"
                              ],
                              [
                                "-122.02790000",
                                "37.04900000"
                              ],
                              [
                                "-121.97990000",
                                "37.22990000"
                              ],
                              [
                                "-121.94450000",
                                "37.32400000"
                              ],
                              [
                                "-121.93600000",
                                "37.35300000"
                              ],
                              [
                                "-121.92400000",
                                "37.36500000"
                              ]
                            ]
                          }
                        },
                          ],
                          "showOnMap": false,
                          "timetables": Array [
                            Object {
                              "_id": "timetable-id",
                              "dwellTime": 10,
                              "endTime": 57600,
                              "exactTimes": false,
                              "friday": true,
                              "headwaySecs": 900,
                              "modificationId": "1234",
                              "modificationName": "Test Modification",
                              "monday": true,
                              "name": "Test timetable",
                              "patternTrips": Array [
                                "abcd",
                              ],
                              "phaseAtStop": "",
                              "phaseFromStop": "",
                              "phaseFromTimetable": "",
                              "phaseSeconds": 300,
                              "saturday": false,
                              "segmentSpeeds": Array [],
                              "sourceTrip": "abcd",
                              "startTime": 28800,
                              "sunday": false,
                              "thursday": true,
                              "tuesday": true,
                              "wednesday": true,
                            },
                          ],
                          "trips": Array [
                            "abcd",
                          ],
                          "type": "add-trip-pattern",
                          "variants": Array [
                            true,
                          ],
                        }
                      }
                      numberOfStops={1}
                      qualifiedStops={Array []}
                      scenarioTimetables={Array []}
                      segmentDistances={
                        Array [
                          45.223652927700726,
                        ]
                      }
                      setMapState={[Function]}
                      type="add-trip-pattern"
                      update={[Function]}
                      updateAndRetrieveFeedData={[Function]}
                    >
                      <div>
                        <EditAlignment
                          extendFromEnd={true}
                          mapState={
                            Object {
                              "activeTrips": Array [],
                              "center": Object {
                                "lat": 38.8886,
                                "lon": -77.043,
                              },
                              "components": Array [],
                              "zoom": 12,
                            }
                          }
                          modification={
                            Object {
                              "_id": "1234",
                              "bidirectional": false,
                              "description": "Mock description",
                              "entries": Array [],
                              "feed": "1",
                              "name": "Test Modification",
                              "routes": Array [
                                "route1",
                              ],
                              "scenarioId": "1",
                              "segments": Array [
                                {
                              "type": "Feature",
                              "properties": {},
                              "geometry": {
                                "type": "LineString",
                                "coordinates": [
                                  [
                                    "-122.02460000",
                                    "36.97070000"
                                  ],
                                  [
                                    "-122.02790000",
                                    "37.04900000"
                                  ],
                                  [
                                    "-121.97990000",
                                    "37.22990000"
                                  ],
                                  [
                                    "-121.94450000",
                                    "37.32400000"
                                  ],
                                  [
                                    "-121.93600000",
                                    "37.35300000"
                                  ],
                                  [
                                    "-121.92400000",
                                    "37.36500000"
                                  ]
                                ]
                              }
                            },
                              ],
                              "showOnMap": false,
                              "timetables": Array [
                                Object {
                                  "_id": "timetable-id",
                                  "dwellTime": 10,
                                  "endTime": 57600,
                                  "exactTimes": false,
                                  "friday": true,
                                  "headwaySecs": 900,
                                  "modificationId": "1234",
                                  "modificationName": "Test Modification",
                                  "monday": true,
                                  "name": "Test timetable",
                                  "patternTrips": Array [
                                    "abcd",
                                  ],
                                  "phaseAtStop": "",
                                  "phaseFromStop": "",
                                  "phaseFromTimetable": "",
                                  "phaseSeconds": 300,
                                  "saturday": false,
                                  "segmentSpeeds": Array [],
                                  "sourceTrip": "abcd",
                                  "startTime": 28800,
                                  "sunday": false,
                                  "thursday": true,
                                  "tuesday": true,
                                  "wednesday": true,
                                },
                              ],
                              "trips": Array [
                                "abcd",
                              ],
                              "type": "add-trip-pattern",
                              "variants": Array [
                                true,
                              ],
                            }
                          }
                          setMapState={[Function]}
                          update={[Function]}
                        >
                          <div>
                            <Button
                              block={true}
                              onClick={[Function]}
                              style="warning"
                            >
                              <a
                                className="btn btn-warning btn-block"
                                href="#"
                                onClick={[Function]}
                                tabIndex={0}
                              >
                                <Icon
                                  type="pencil"
                                >
                                  <i
                                    className="fa fa-pencil fa-fw "
                                  />
                                </Icon>
                                 
                                Edit route geometry
                              </a>
                            </Button>
                            <Checkbox
                              defaultChecked={false}
                              label="Create stops automatically"
                              onChange={[Function]}
                            >
                              <div
                                className="checkbox"
                              >
                                <label
                                  htmlFor="create-stops-automatically-input-11"
                                >
                                  <input
                                    defaultChecked={false}
                                    id="create-stops-automatically-input-11"
                                    onChange={[Function]}
                                    type="checkbox"
                                  />
                                   
                                  Create stops automatically
                                </label>
                              </div>
                            </Checkbox>
                            <Checkbox
                              checked={false}
                              disabled={true}
                              label="Bidirectional"
                              onChange={[Function]}
                            >
                              <div
                                className="checkbox"
                              >
                                <label
                                  htmlFor="bidirectional-input-12"
                                >
                                  <input
                                    checked={false}
                                    disabled={true}
                                    id="bidirectional-input-12"
                                    onChange={[Function]}
                                    type="checkbox"
                                  />
                                   
                                  Bidirectional
                                </label>
                              </div>
                            </Checkbox>
                            <div
                              className="alert alert-info"
                              role="alert"
                            >
                              Modification cannot be bidirectional because timetables in this modification have phasing information.
                            </div>
                          </div>
                        </EditAlignment>
                        <Timetables
                          allPhaseFromTimetableStops={Object {}}
                          bidirectional={false}
                          modificationStops={Array []}
                          numberOfStops={1}
                          qualifiedStops={Array []}
                          scenarioTimetables={Array []}
                          segmentDistances={
                            Array [
                              45.223652927700726,
                            ]
                          }
                          setMapState={[Function]}
                          timetables={
                            Array [
                              Object {
                                "_id": "timetable-id",
                                "dwellTime": 10,
                                "endTime": 57600,
                                "exactTimes": false,
                                "friday": true,
                                "headwaySecs": 900,
                                "modificationId": "1234",
                                "modificationName": "Test Modification",
                                "monday": true,
                                "name": "Test timetable",
                                "patternTrips": Array [
                                  "abcd",
                                ],
                                "phaseAtStop": "",
                                "phaseFromStop": "",
                                "phaseFromTimetable": "",
                                "phaseSeconds": 300,
                                "saturday": false,
                                "segmentSpeeds": Array [],
                                "sourceTrip": "abcd",
                                "startTime": 28800,
                                "sunday": false,
                                "thursday": true,
                                "tuesday": true,
                                "wednesday": true,
                              },
                            ]
                          }
                          update={[Function]}
                        >
                          <div>
                            <p>
                              <Button
                                block={true}
                                onClick={[Function]}
                                style="success"
                              >
                                <a
                                  className="btn btn-success btn-block"
                                  href="#"
                                  onClick={[Function]}
                                  tabIndex={0}
                                >
                                  <Icon
                                    type="plus"
                                  >
                                    <i
                                      className="fa fa-plus fa-fw "
                                    />
                                  </Icon>
                                   Add timetable
                                </a>
                              </Button>
                            </p>
                            <TimetableComponent
                              allPhaseFromTimetableStops={Object {}}
                              bidirectional={false}
                              modificationStops={Array []}
                              numberOfStops={1}
                              qualifiedStops={Array []}
                              remove={[Function]}
                              scenarioTimetables={Array []}
                              segmentDistances={
                                Array [
                                  45.223652927700726,
                                ]
                              }
                              setMapState={[Function]}
                              timetable={
                                Object {
                                  "_id": "timetable-id",
                                  "dwellTime": 10,
                                  "endTime": 57600,
                                  "exactTimes": false,
                                  "friday": true,
                                  "headwaySecs": 900,
                                  "modificationId": "1234",
                                  "modificationName": "Test Modification",
                                  "monday": true,
                                  "name": "Test timetable",
                                  "patternTrips": Array [
                                    "abcd",
                                  ],
                                  "phaseAtStop": "",
                                  "phaseFromStop": "",
                                  "phaseFromTimetable": "",
                                  "phaseSeconds": 300,
                                  "saturday": false,
                                  "segmentSpeeds": Array [],
                                  "sourceTrip": "abcd",
                                  "startTime": 28800,
                                  "sunday": false,
                                  "thursday": true,
                                  "tuesday": true,
                                  "wednesday": true,
                                }
                              }
                              update={[Function]}
                            >
                              <section
                                className="panel panel-default inner-panel"
                              >
                                <a
                                  className="panel-heading clearfix"
                                  onClick={[Function]}
                                  style={
                                    Object {
                                      "cursor": "pointer",
                                    }
                                  }
                                  tabIndex={0}
                                >
                                  <Icon
                                    type="calendar"
                                  >
                                    <i
                                      className="fa fa-calendar fa-fw "
                                    />
                                  </Icon>
                                  <strong>
                                     
                                    Test timetable
                                  </strong>
                                  <Icon
                                    className="pull-right"
                                    type="caret-right"
                                  >
                                    <i
                                      className="fa fa-caret-right fa-fw pull-right"
                                    />
                                  </Icon>
                                </a>
                              </section>
                            </TimetableComponent>
                          </div>
                        </Timetables>
                      </div>
                    </Component>
                  </Connect(Component)>
                </ModificationType>
                <Variants
                  activeVariants={
                    Array [
                      true,
                    ]
                  }
                  allVariants={
                    Array [
                      "Default",
                    ]
                  }
                  modificationId="1234"
                  setVariant={[Function]}
                >
                  <div>
                    <h5>
                      Active in scenario numbers
                    </h5>
                    <div
                      className="form-inline"
                    >
                      <Checkbox
                        checked={true}
                        label={1}
                        onChange={[Function]}
                        title="Default"
                      >
                        <div
                          className="checkbox"
                        >
                          <label
                            htmlFor="1-input-13"
                          >
                            <input
                              checked={true}
                              id="1-input-13"
                              onChange={[Function]}
                              title="Default"
                              type="checkbox"
                            />
                             
                            1
                          </label>
                        </div>
                      </Checkbox>
                    </div>
                  </div>
                </Variants>
              </div>
            </Body>
          </div>
        </InnerDock>
      </div>
    </ModificationEditor>
  </Connect(ModificationEditor)>
</Provider>
`;

exports[`Container > Modification Editor renders and can change the name 1`] = `
Array [
  Object {
    "payload": "1234",
    "type": "set active modification",
  },
  Object {
    "payload": Object {
      "options": Object {
        "body": Object {
          "_id": "1234",
          "bidirectional": false,
          "description": "Mock description",
          "entries": Array [],
          "feed": "1",
          "name": "Test Modification",
          "routes": Array [
            "route1",
          ],
          "scenarioId": "1",
          "segments": Array [
            {
  "type": "Feature",
  "properties": {},
  "geometry": {
    "type": "LineString",
    "coordinates": [
      [
        "-122.02460000",
        "36.97070000"
      ],
      [
        "-122.02790000",
        "37.04900000"
      ],
      [
        "-121.97990000",
        "37.22990000"
      ],
      [
        "-121.94450000",
        "37.32400000"
      ],
      [
        "-121.93600000",
        "37.35300000"
      ],
      [
        "-121.92400000",
        "37.36500000"
      ]
    ]
  }
},
          ],
          "showOnMap": false,
          "timetables": Array [
            Object {
              "_id": "timetable-id",
              "dwellTime": 10,
              "endTime": 57600,
              "exactTimes": false,
              "friday": true,
              "headwaySecs": 900,
              "modificationId": "1234",
              "modificationName": "Test Modification",
              "monday": true,
              "name": "Test timetable",
              "patternTrips": Array [
                "abcd",
              ],
              "phaseAtStop": "",
              "phaseFromStop": "",
              "phaseFromTimetable": "",
              "phaseSeconds": 300,
              "saturday": false,
              "segmentSpeeds": Array [],
              "sourceTrip": "abcd",
              "startTime": 28800,
              "sunday": false,
              "thursday": true,
              "tuesday": true,
              "wednesday": true,
            },
          ],
          "trips": Array [
            "abcd",
          ],
          "type": "add-trip-pattern",
          "variants": Array [
            true,
          ],
        },
        "method": "put",
      },
      "url": "/api/modification/1234",
    },
    "type": "increment outstanding fetches",
  },
]
`;

exports[`Container > Modification Editor renders correctly 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(ModificationEditor)
    params={
      Object {
        "modificationId": "1234",
        "scenarioId": "1",
      }
    }
  >
    <ModificationEditor
      allVariants={
        Array [
          "Default",
        ]
      }
      clearActive={[Function]}
      copyModification={[Function]}
      feedIsLoaded={true}
      modification={
        Object {
          "_id": "1234",
          "bidirectional": false,
          "description": "Mock description",
          "entries": Array [],
          "feed": "1",
          "name": "Test Modification",
          "routes": Array [
            "route1",
          ],
          "scenarioId": "1",
          "segments": Array [
            {
          "type": "Feature",
          "properties": {},
          "geometry": {
            "type": "LineString",
            "coordinates": [
              [
                "-122.02460000",
                "36.97070000"
              ],
              [
                "-122.02790000",
                "37.04900000"
              ],
              [
                "-121.97990000",
                "37.22990000"
              ],
              [
                "-121.94450000",
                "37.32400000"
              ],
              [
                "-121.93600000",
                "37.35300000"
              ],
              [
                "-121.92400000",
                "37.36500000"
              ]
            ]
          }
        },
          ],
          "showOnMap": false,
          "timetables": Array [
            Object {
              "_id": "timetable-id",
              "dwellTime": 10,
              "endTime": 57600,
              "exactTimes": false,
              "friday": true,
              "headwaySecs": 900,
              "modificationId": "1234",
              "modificationName": "Test Modification",
              "monday": true,
              "name": "Test timetable",
              "patternTrips": Array [
                "abcd",
              ],
              "phaseAtStop": "",
              "phaseFromStop": "",
              "phaseFromTimetable": "",
              "phaseSeconds": 300,
              "saturday": false,
              "segmentSpeeds": Array [],
              "sourceTrip": "abcd",
              "startTime": 28800,
              "sunday": false,
              "thursday": true,
              "tuesday": true,
              "wednesday": true,
            },
          ],
          "trips": Array [
            "abcd",
          ],
          "type": "add-trip-pattern",
          "variants": Array [
            true,
          ],
        }
      }
      modificationId="1234"
      params={
        Object {
          "modificationId": "1234",
          "scenarioId": "1",
        }
      }
      removeModification={[Function]}
      scenarioId="1"
      setActive={[Function]}
      setActiveTrips={[Function]}
      setMapState={[Function]}
      update={[Function]}
      updateAndRetrieveFeedData={[Function]}
    >
      <div>
        <div
          className="ApplicationDockTitle"
        >
          <IconLink
            title="Modifications"
            to="/scenarios/1"
            type="chevron-left"
          >
            <Link
              title="Modifications"
              to="/scenarios/1"
              type="button"
            >
              <Tip
                tip="Modifications"
              >
                <span
                  className="Tip "
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <Link
                    name="Modifications"
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/scenarios/1"
                    type="button"
                  >
                    <a
                      name="Modifications"
                      onClick={[Function]}
                      style={Object {}}
                      type="button"
                    >
                      <Icon
                        type="chevron-left"
                      >
                        <i
                          className="fa fa-chevron-left fa-fw "
                        />
                      </Icon>
                    </a>
                  </Link>
                </span>
              </Tip>
            </Link>
          </IconLink>
          Test Modification
          <IconLink
            className="pull-right"
            onClick={[Function]}
            title="Delete modification"
            type="trash"
          >
            <Link
              className="pull-right"
              onClick={[Function]}
              title="Delete modification"
              type="button"
            >
              <Tip
                className="pull-right"
                tip="Delete modification"
              >
                <span
                  className="Tip pull-right"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <a
                    name="Delete modification"
                    onClick={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    <Icon
                      type="trash"
                    >
                      <i
                        className="fa fa-trash fa-fw "
                      />
                    </Icon>
                  </a>
                </span>
              </Tip>
            </Link>
          </IconLink>
          <IconLink
            className="pull-right"
            onClick={[Function]}
            title="Copy modification"
            type="copy"
          >
            <Link
              className="pull-right"
              onClick={[Function]}
              title="Copy modification"
              type="button"
            >
              <Tip
                className="pull-right"
                tip="Copy modification"
              >
                <span
                  className="Tip pull-right"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <a
                    name="Copy modification"
                    onClick={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    <Icon
                      type="copy"
                    >
                      <i
                        className="fa fa-copy fa-fw "
                      />
                    </Icon>
                  </a>
                </span>
              </Tip>
            </Link>
          </IconLink>
          <IconLink
            className="pull-right"
            onClick={[Function]}
            title="Edit modification name"
            type="pencil"
          >
            <Link
              className="pull-right"
              onClick={[Function]}
              title="Edit modification name"
              type="button"
            >
              <Tip
                className="pull-right"
                tip="Edit modification name"
              >
                <span
                  className="Tip pull-right"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <a
                    name="Edit modification name"
                    onClick={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    <Icon
                      type="pencil"
                    >
                      <i
                        className="fa fa-pencil fa-fw "
                      />
                    </Icon>
                  </a>
                </span>
              </Tip>
            </Link>
          </IconLink>
        </div>
        <InnerDock>
          <div
            className="InnerDock "
            style={
              Object {
                "height": 768,
              }
            }
          >
            <Body>
              <div
                className="panel-body"
              >
                <TextArea
                  label="Description"
                  onChange={[Function]}
                  value="Mock description"
                >
                  <Group
                    id="description-input-0"
                    label="Description"
                    onChange={[Function]}
                  >
                    <div
                      className="form-group"
                    >
                      <label
                        htmlFor="description-input-0"
                      >
                        Description
                      </label>
                      <textarea
                        className="form-control"
                        id="description-input-0"
                        label="Description"
                        onChange={[Function]}
                      >
                        Mock description
                      </textarea>
                    </div>
                  </Group>
                </TextArea>
                <ModificationType
                  modification={
                    Object {
                      "_id": "1234",
                      "bidirectional": false,
                      "description": "Mock description",
                      "entries": Array [],
                      "feed": "1",
                      "name": "Test Modification",
                      "routes": Array [
                        "route1",
                      ],
                      "scenarioId": "1",
                      "segments": Array [
                        {
                      "type": "Feature",
                      "properties": {},
                      "geometry": {
                        "type": "LineString",
                        "coordinates": [
                          [
                            "-122.02460000",
                            "36.97070000"
                          ],
                          [
                            "-122.02790000",
                            "37.04900000"
                          ],
                          [
                            "-121.97990000",
                            "37.22990000"
                          ],
                          [
                            "-121.94450000",
                            "37.32400000"
                          ],
                          [
                            "-121.93600000",
                            "37.35300000"
                          ],
                          [
                            "-121.92400000",
                            "37.36500000"
                          ]
                        ]
                      }
                    },
                      ],
                      "showOnMap": false,
                      "timetables": Array [
                        Object {
                          "_id": "timetable-id",
                          "dwellTime": 10,
                          "endTime": 57600,
                          "exactTimes": false,
                          "friday": true,
                          "headwaySecs": 900,
                          "modificationId": "1234",
                          "modificationName": "Test Modification",
                          "monday": true,
                          "name": "Test timetable",
                          "patternTrips": Array [
                            "abcd",
                          ],
                          "phaseAtStop": "",
                          "phaseFromStop": "",
                          "phaseFromTimetable": "",
                          "phaseSeconds": 300,
                          "saturday": false,
                          "segmentSpeeds": Array [],
                          "sourceTrip": "abcd",
                          "startTime": 28800,
                          "sunday": false,
                          "thursday": true,
                          "tuesday": true,
                          "wednesday": true,
                        },
                      ],
                      "trips": Array [
                        "abcd",
                      ],
                      "type": "add-trip-pattern",
                      "variants": Array [
                        true,
                      ],
                    }
                  }
                  setMapState={[Function]}
                  type="add-trip-pattern"
                  update={[Function]}
                  updateAndRetrieveFeedData={[Function]}
                >
                  <Connect(Component)
                    modification={
                      Object {
                        "_id": "1234",
                        "bidirectional": false,
                        "description": "Mock description",
                        "entries": Array [],
                        "feed": "1",
                        "name": "Test Modification",
                        "routes": Array [
                          "route1",
                        ],
                        "scenarioId": "1",
                        "segments": Array [
                          {
                        "type": "Feature",
                        "properties": {},
                        "geometry": {
                          "type": "LineString",
                          "coordinates": [
                            [
                              "-122.02460000",
                              "36.97070000"
                            ],
                            [
                              "-122.02790000",
                              "37.04900000"
                            ],
                            [
                              "-121.97990000",
                              "37.22990000"
                            ],
                            [
                              "-121.94450000",
                              "37.32400000"
                            ],
                            [
                              "-121.93600000",
                              "37.35300000"
                            ],
                            [
                              "-121.92400000",
                              "37.36500000"
                            ]
                          ]
                        }
                      },
                        ],
                        "showOnMap": false,
                        "timetables": Array [
                          Object {
                            "_id": "timetable-id",
                            "dwellTime": 10,
                            "endTime": 57600,
                            "exactTimes": false,
                            "friday": true,
                            "headwaySecs": 900,
                            "modificationId": "1234",
                            "modificationName": "Test Modification",
                            "monday": true,
                            "name": "Test timetable",
                            "patternTrips": Array [
                              "abcd",
                            ],
                            "phaseAtStop": "",
                            "phaseFromStop": "",
                            "phaseFromTimetable": "",
                            "phaseSeconds": 300,
                            "saturday": false,
                            "segmentSpeeds": Array [],
                            "sourceTrip": "abcd",
                            "startTime": 28800,
                            "sunday": false,
                            "thursday": true,
                            "tuesday": true,
                            "wednesday": true,
                          },
                        ],
                        "trips": Array [
                          "abcd",
                        ],
                        "type": "add-trip-pattern",
                        "variants": Array [
                          true,
                        ],
                      }
                    }
                    setMapState={[Function]}
                    type="add-trip-pattern"
                    update={[Function]}
                    updateAndRetrieveFeedData={[Function]}
                  >
                    <Component
                      allPhaseFromTimetableStops={Object {}}
                      dispatch={[Function]}
                      extendFromEnd={true}
                      gtfsStops={Array []}
                      mapState={
                        Object {
                          "activeTrips": Array [],
                          "center": Object {
                            "lat": 38.8886,
                            "lon": -77.043,
                          },
                          "components": Array [],
                          "zoom": 12,
                        }
                      }
                      modification={
                        Object {
                          "_id": "1234",
                          "bidirectional": false,
                          "description": "Mock description",
                          "entries": Array [],
                          "feed": "1",
                          "name": "Test Modification",
                          "routes": Array [
                            "route1",
                          ],
                          "scenarioId": "1",
                          "segments": Array [
                            {
                          "type": "Feature",
                          "properties": {},
                          "geometry": {
                            "type": "LineString",
                            "coordinates": [
                              [
                                "-122.02460000",
                                "36.97070000"
                              ],
                              [
                                "-122.02790000",
                                "37.04900000"
                              ],
                              [
                                "-121.97990000",
                                "37.22990000"
                              ],
                              [
                                "-121.94450000",
                                "37.32400000"
                              ],
                              [
                                "-121.93600000",
                                "37.35300000"
                              ],
                              [
                                "-121.92400000",
                                "37.36500000"
                              ]
                            ]
                          }
                        },
                          ],
                          "showOnMap": false,
                          "timetables": Array [
                            Object {
                              "_id": "timetable-id",
                              "dwellTime": 10,
                              "endTime": 57600,
                              "exactTimes": false,
                              "friday": true,
                              "headwaySecs": 900,
                              "modificationId": "1234",
                              "modificationName": "Test Modification",
                              "monday": true,
                              "name": "Test timetable",
                              "patternTrips": Array [
                                "abcd",
                              ],
                              "phaseAtStop": "",
                              "phaseFromStop": "",
                              "phaseFromTimetable": "",
                              "phaseSeconds": 300,
                              "saturday": false,
                              "segmentSpeeds": Array [],
                              "sourceTrip": "abcd",
                              "startTime": 28800,
                              "sunday": false,
                              "thursday": true,
                              "tuesday": true,
                              "wednesday": true,
                            },
                          ],
                          "trips": Array [
                            "abcd",
                          ],
                          "type": "add-trip-pattern",
                          "variants": Array [
                            true,
                          ],
                        }
                      }
                      numberOfStops={1}
                      qualifiedStops={Array []}
                      scenarioTimetables={Array []}
                      segmentDistances={
                        Array [
                          45.223652927700726,
                        ]
                      }
                      setMapState={[Function]}
                      type="add-trip-pattern"
                      update={[Function]}
                      updateAndRetrieveFeedData={[Function]}
                    >
                      <div>
                        <EditAlignment
                          extendFromEnd={true}
                          mapState={
                            Object {
                              "activeTrips": Array [],
                              "center": Object {
                                "lat": 38.8886,
                                "lon": -77.043,
                              },
                              "components": Array [],
                              "zoom": 12,
                            }
                          }
                          modification={
                            Object {
                              "_id": "1234",
                              "bidirectional": false,
                              "description": "Mock description",
                              "entries": Array [],
                              "feed": "1",
                              "name": "Test Modification",
                              "routes": Array [
                                "route1",
                              ],
                              "scenarioId": "1",
                              "segments": Array [
                                {
                              "type": "Feature",
                              "properties": {},
                              "geometry": {
                                "type": "LineString",
                                "coordinates": [
                                  [
                                    "-122.02460000",
                                    "36.97070000"
                                  ],
                                  [
                                    "-122.02790000",
                                    "37.04900000"
                                  ],
                                  [
                                    "-121.97990000",
                                    "37.22990000"
                                  ],
                                  [
                                    "-121.94450000",
                                    "37.32400000"
                                  ],
                                  [
                                    "-121.93600000",
                                    "37.35300000"
                                  ],
                                  [
                                    "-121.92400000",
                                    "37.36500000"
                                  ]
                                ]
                              }
                            },
                              ],
                              "showOnMap": false,
                              "timetables": Array [
                                Object {
                                  "_id": "timetable-id",
                                  "dwellTime": 10,
                                  "endTime": 57600,
                                  "exactTimes": false,
                                  "friday": true,
                                  "headwaySecs": 900,
                                  "modificationId": "1234",
                                  "modificationName": "Test Modification",
                                  "monday": true,
                                  "name": "Test timetable",
                                  "patternTrips": Array [
                                    "abcd",
                                  ],
                                  "phaseAtStop": "",
                                  "phaseFromStop": "",
                                  "phaseFromTimetable": "",
                                  "phaseSeconds": 300,
                                  "saturday": false,
                                  "segmentSpeeds": Array [],
                                  "sourceTrip": "abcd",
                                  "startTime": 28800,
                                  "sunday": false,
                                  "thursday": true,
                                  "tuesday": true,
                                  "wednesday": true,
                                },
                              ],
                              "trips": Array [
                                "abcd",
                              ],
                              "type": "add-trip-pattern",
                              "variants": Array [
                                true,
                              ],
                            }
                          }
                          setMapState={[Function]}
                          update={[Function]}
                        >
                          <div>
                            <Button
                              block={true}
                              onClick={[Function]}
                              style="warning"
                            >
                              <a
                                className="btn btn-warning btn-block"
                                href="#"
                                onClick={[Function]}
                                tabIndex={0}
                              >
                                <Icon
                                  type="pencil"
                                >
                                  <i
                                    className="fa fa-pencil fa-fw "
                                  />
                                </Icon>
                                 
                                Edit route geometry
                              </a>
                            </Button>
                            <Checkbox
                              defaultChecked={false}
                              label="Create stops automatically"
                              onChange={[Function]}
                            >
                              <div
                                className="checkbox"
                              >
                                <label
                                  htmlFor="create-stops-automatically-input-1"
                                >
                                  <input
                                    defaultChecked={false}
                                    id="create-stops-automatically-input-1"
                                    onChange={[Function]}
                                    type="checkbox"
                                  />
                                   
                                  Create stops automatically
                                </label>
                              </div>
                            </Checkbox>
                            <Checkbox
                              checked={false}
                              disabled={true}
                              label="Bidirectional"
                              onChange={[Function]}
                            >
                              <div
                                className="checkbox"
                              >
                                <label
                                  htmlFor="bidirectional-input-2"
                                >
                                  <input
                                    checked={false}
                                    disabled={true}
                                    id="bidirectional-input-2"
                                    onChange={[Function]}
                                    type="checkbox"
                                  />
                                   
                                  Bidirectional
                                </label>
                              </div>
                            </Checkbox>
                            <div
                              className="alert alert-info"
                              role="alert"
                            >
                              Modification cannot be bidirectional because timetables in this modification have phasing information.
                            </div>
                          </div>
                        </EditAlignment>
                        <Timetables
                          allPhaseFromTimetableStops={Object {}}
                          bidirectional={false}
                          modificationStops={Array []}
                          numberOfStops={1}
                          qualifiedStops={Array []}
                          scenarioTimetables={Array []}
                          segmentDistances={
                            Array [
                              45.223652927700726,
                            ]
                          }
                          setMapState={[Function]}
                          timetables={
                            Array [
                              Object {
                                "_id": "timetable-id",
                                "dwellTime": 10,
                                "endTime": 57600,
                                "exactTimes": false,
                                "friday": true,
                                "headwaySecs": 900,
                                "modificationId": "1234",
                                "modificationName": "Test Modification",
                                "monday": true,
                                "name": "Test timetable",
                                "patternTrips": Array [
                                  "abcd",
                                ],
                                "phaseAtStop": "",
                                "phaseFromStop": "",
                                "phaseFromTimetable": "",
                                "phaseSeconds": 300,
                                "saturday": false,
                                "segmentSpeeds": Array [],
                                "sourceTrip": "abcd",
                                "startTime": 28800,
                                "sunday": false,
                                "thursday": true,
                                "tuesday": true,
                                "wednesday": true,
                              },
                            ]
                          }
                          update={[Function]}
                        >
                          <div>
                            <p>
                              <Button
                                block={true}
                                onClick={[Function]}
                                style="success"
                              >
                                <a
                                  className="btn btn-success btn-block"
                                  href="#"
                                  onClick={[Function]}
                                  tabIndex={0}
                                >
                                  <Icon
                                    type="plus"
                                  >
                                    <i
                                      className="fa fa-plus fa-fw "
                                    />
                                  </Icon>
                                   Add timetable
                                </a>
                              </Button>
                            </p>
                            <TimetableComponent
                              allPhaseFromTimetableStops={Object {}}
                              bidirectional={false}
                              modificationStops={Array []}
                              numberOfStops={1}
                              qualifiedStops={Array []}
                              remove={[Function]}
                              scenarioTimetables={Array []}
                              segmentDistances={
                                Array [
                                  45.223652927700726,
                                ]
                              }
                              setMapState={[Function]}
                              timetable={
                                Object {
                                  "_id": "timetable-id",
                                  "dwellTime": 10,
                                  "endTime": 57600,
                                  "exactTimes": false,
                                  "friday": true,
                                  "headwaySecs": 900,
                                  "modificationId": "1234",
                                  "modificationName": "Test Modification",
                                  "monday": true,
                                  "name": "Test timetable",
                                  "patternTrips": Array [
                                    "abcd",
                                  ],
                                  "phaseAtStop": "",
                                  "phaseFromStop": "",
                                  "phaseFromTimetable": "",
                                  "phaseSeconds": 300,
                                  "saturday": false,
                                  "segmentSpeeds": Array [],
                                  "sourceTrip": "abcd",
                                  "startTime": 28800,
                                  "sunday": false,
                                  "thursday": true,
                                  "tuesday": true,
                                  "wednesday": true,
                                }
                              }
                              update={[Function]}
                            >
                              <section
                                className="panel panel-default inner-panel"
                              >
                                <a
                                  className="panel-heading clearfix"
                                  onClick={[Function]}
                                  style={
                                    Object {
                                      "cursor": "pointer",
                                    }
                                  }
                                  tabIndex={0}
                                >
                                  <Icon
                                    type="calendar"
                                  >
                                    <i
                                      className="fa fa-calendar fa-fw "
                                    />
                                  </Icon>
                                  <strong>
                                     
                                    Test timetable
                                  </strong>
                                  <Icon
                                    className="pull-right"
                                    type="caret-right"
                                  >
                                    <i
                                      className="fa fa-caret-right fa-fw pull-right"
                                    />
                                  </Icon>
                                </a>
                              </section>
                            </TimetableComponent>
                          </div>
                        </Timetables>
                      </div>
                    </Component>
                  </Connect(Component)>
                </ModificationType>
                <Variants
                  activeVariants={
                    Array [
                      true,
                    ]
                  }
                  allVariants={
                    Array [
                      "Default",
                    ]
                  }
                  modificationId="1234"
                  setVariant={[Function]}
                >
                  <div>
                    <h5>
                      Active in scenario numbers
                    </h5>
                    <div
                      className="form-inline"
                    >
                      <Checkbox
                        checked={true}
                        label={1}
                        onChange={[Function]}
                        title="Default"
                      >
                        <div
                          className="checkbox"
                        >
                          <label
                            htmlFor="1-input-3"
                          >
                            <input
                              checked={true}
                              id="1-input-3"
                              onChange={[Function]}
                              title="Default"
                              type="checkbox"
                            />
                             
                            1
                          </label>
                        </div>
                      </Checkbox>
                    </div>
                  </div>
                </Variants>
              </div>
            </Body>
          </div>
        </InnerDock>
      </div>
    </ModificationEditor>
  </Connect(ModificationEditor)>
</Provider>
`;
